--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -161,7 +161,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     ```
 
     <Admonition type="warning">
-      When sharing code with others, ensure that your API token is not embedded directly within the Python script in plain text. Instead, share the script without the token and provide instructions for securely setting it up.
+      When sharing code with others, ensure that your API token is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.
     </Admonition>
 
 #### Use a temporary access token
