separate into 2 blocks

--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -57,11 +57,15 @@ Available plans:
     <span id="save-account"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#untrusted-machine) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.) To use `save_account()`, run Python in your shell to open a REPL (read-eval-print loop), then enter the following:
 
     ```python
+    token = "<your-token>"
+    ```
+
+    ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
 
     QiskitRuntimeService.save_account(
-      token="<your-token">,
-      channel="ibm_quantum", # `channel` distinguishes between different account types
+      token=token,
+      channel="ibm_quantum" # `channel` distinguishes between different account types
     )
     ```
     <Admonition type="tip">
