--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -25,10 +25,16 @@
     "\n",
     "```\n",
     "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
     "qiskit-aer~=0.15.1\n",
-    "qiskit-ibm-runtime~=0.31.0\n",
-    "qiskit-serverless~=0.17.1\n",
-    "qiskit-ibm-catalog~=0.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.0\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
     "```\n",
     "</details>"
    ]
@@ -62,9 +68,9 @@
     {
      "data": {
       "text/plain": [
-       "[<RuntimeJob('cwj8a5r9r49g00893azg', 'sampler')>,\n",
-       " <RuntimeJob('cwj82600r6b0008psmrg', 'noise-learner')>,\n",
-       " <RuntimeJob('cwj7w400r6b0008psm4g', 'sampler')>]"
+       "[<RuntimeJob('cwxg5cdtdtng0087gwpg', 'estimator')>,\n",
+       " <RuntimeJob('cwvgyah997wg008xvkgg', 'sampler')>,\n",
+       " <RuntimeJob('cwvg6e95v39g008hm670', 'noise-learner')>]"
       ]
      },
      "execution_count": 1,
@@ -107,15 +113,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z_/6s4ntyps5lsb232v7f82201r0000gn/T/ipykernel_5474/2704799770.py:3: DeprecationWarning: In a future release of qiskit-ibm-runtime no sooner than 3 months after the release date of 0.30.0, RuntimeJob.status() will be returned as a string instead of an instance of `JobStatus`.\n",
-      "  successful_job = next(j for j in service.jobs() if j.status().name == \"DONE\")\n"
+      "/var/folders/z_/6s4ntyps5lsb232v7f82201r0000gn/T/ipykernel_42305/3090032923.py:4: DeprecationWarning: In a future release of qiskit-ibm-runtime no sooner than 3 months after the release date of 0.30.0, RuntimeJob.status() will be returned as a string instead of an instance of `JobStatus`.\n",
+      "  j for j in service.jobs(limit=1000) if j.status().name == \"DONE\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cwj8a5r9r49g00893azg\n"
+      "cwvgyah997wg008xvkgg\n"
      ]
     }
    ],
@@ -138,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2024-11-01 07:37:02', stop='2024-11-01 07:39:03', size=409600>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2024-11-15 09:06:56', stop='2024-11-15 09:09:21', size=409600>)])}, 'version': 2})"
       ]
      },
      "execution_count": 3,
@@ -205,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2024-11-01 07:37:02', stop='2024-11-01 07:39:03', size=409600>)])}, 'version': 2})"
+       "PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2024-11-15 09:06:56', stop='2024-11-15 09:09:21', size=409600>)])}, 'version': 2})"
       ]
      },
      "execution_count": 5,
