--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -329,7 +329,62 @@
     }
    ],
    "source": [
-    "serverless.list()[:3]  # Limit to first three functions"
+    "# Get program from serverless.list() that matches the title of the one we uploaded\n",
+    "next(\n",
+    "    program for program in serverless.list()\n",
+    "    if program.title == \"transpile_remote_serverless\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users, it checks the program uploaded correctly\n",
+    "assert _.title == \"transpile_remote_serverless\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users, it checks the program executes correctly\n",
+    "from time import sleep\n",
+    "from qiskit import QuantumCircuit\n",
+    "qc = QuantumCircuit(2)\n",
+    "transpile_remote_serverless = serverless.load(\"transpile_remote_serverless\")\n",
+    "job = transpile_remote_serverless.run(\n",
+    "    circuits=[qc],\n",
+    "    backend=\"ibm_sherbrooke\",\n",
+    "    optimization_level=1,\n",
+    ")\n",
+    "for cycle in range(20):\n",
+    "    sleep(5)\n",
+    "    status = job.status()\n",
+    "    print(f\"Cycle {cycle}: Status: {status}\")\n",
+    "    if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
+    "        raise Exception(\n",
+    "            f\"Unexpected job status: '{status}'\\n\"\n",
+    "            + \"Here are the logs:\\n\"\n",
+    "            + job.logs()\n",
+    "        )\n",
+    "    if status == \"DONE\":\n",
+    "        break\n",
+    "status = job.status()\n",
+    "if status != \"DONE\":\n",
+    "    raise Exception(f\"Job did not complete in time (got status '{status}')\")"
    ]
   },
   {
