--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -318,9 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "[QiskitFunction(transpile_remote_serverless_test_7b71d607),\n",
-       " QiskitFunction(transpile_remote_serverless_test_6169e40a),\n",
-       " QiskitFunction(transpile_remote_serverless_test_3e28580a)]"
+       "QiskitFunction(transpile_remote_serverless)"
       ]
      },
      "execution_count": 9,
@@ -338,7 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "7fee3152-025d-4df6-8299-591fe0482dac",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -352,13 +351,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "f0730886-1d67-4d1b-9ab2-133cbcfc7e49",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 0: Status: QUEUED\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 1: Status: QUEUED\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 2: Status: QUEUED\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 3: Status: INITIALIZING\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 4: Status: RUNNING\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 5: Status: RUNNING\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 6: Status: RUNNING\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cycle 7: Status: DONE\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell is hidden from users, it checks the program executes correctly\n",
     "from time import sleep\n",
