--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## List programs available\n",
     "\n",
-    "You can use `QiskitServerless.list()` to print out a list of the available programs to run with Qiskit Serverless. This includes the previously uploaded [`transpile_remote_serverless`](./serverless-first-program)."
+    "You can use `QiskitServerless.list()` to fetch a list of the available programs to run with Qiskit Serverless. This includes the previously uploaded [`transpile_remote_serverless`](./serverless-first-program)."
    ]
   },
   {
@@ -68,9 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "[QiskitFunction(transpile_remote_serverless_test_7b71d607),\n",
-       " QiskitFunction(transpile_remote_serverless_test_6169e40a),\n",
-       " QiskitFunction(transpile_remote_serverless_test_3e28580a)]"
+       "QiskitFunction(transpile_remote_serverless)"
       ]
      },
      "execution_count": 1,
@@ -82,7 +80,10 @@
     "from qiskit_ibm_catalog import QiskitServerless\n",
     "\n",
     "serverless = QiskitServerless()\n",
-    "serverless.list()[:3]  # Limit to first three programs"
+    "next(\n",
+    "    program for program in serverless.list()\n",
+    "    if program.title == \"transpile_remote_serverless\"\n",
+    ")"
    ]
   },
   {
@@ -265,6 +266,20 @@
    ],
    "source": [
     "job.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users, it checks the job status\n",
+    "assert _ in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]"
    ]
   },
   {
