--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -81,7 +81,8 @@
     "\n",
     "serverless = QiskitServerless()\n",
     "next(\n",
-    "    program for program in serverless.list()\n",
+    "    program\n",
+    "    for program in serverless.list()\n",
     "    if program.title == \"transpile_remote_serverless\"\n",
     ")"
    ]
@@ -280,7 +281,7 @@
    "outputs": [],
    "source": [
     "# This cell is hidden from users, it checks the job status\n",
-    "assert _ in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]"
+    "assert _ in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]  # noqa: F821"
    ]
   },
   {
