Fix folder not existing

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -39,6 +39,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users, it just creates a new folder\n",
+    "from pathlib import Path\n",
+    "\n",
+    "Path(\"./source_files\").mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
    "metadata": {},
    "outputs": [],
