--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -33,7 +33,7 @@
    "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
-    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_parallel.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
+    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
    ]
   },
   {
@@ -139,6 +139,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "757f81e9-3981-4358-a1a2-d3262c7cddcd",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%%writefile --append ./source_files/transpile_remote.py\n",
+    "# This cell is hidden from users. It checks the transpilation ran correctly.\n",
+    "from qiskit import QuantumCircuit\n",
+    "assert all(isinstance(result, QuantumCircuit) for result in results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df28a92c-3585-49f0-a2ea-828a34638684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users.\n",
+    "# It uploads the serverless program and checks it runs.\n",
+    "\n",
+    "\n",
+    "def test_serverless_job(title, entrypoint):\n",
+    "    # Import in function to stop them interfering with user-facing code\n",
+    "    from qiskit.circuit.random import random_circuit\n",
+    "    from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
+    "    import time\n",
+    "    import uuid\n",
+    "\n",
+    "    title += \"_\" + uuid.uuid4().hex[:8]\n",
+    "    serverless = IBMServerlessClient()\n",
+    "    transpile_remote_demo = QiskitFunction(\n",
+    "        title=title,\n",
+    "        entrypoint=entrypoint,\n",
+    "        working_dir=\"./source_files/\",\n",
+    "    )\n",
+    "    serverless.upload(transpile_remote_demo)\n",
+    "    job = serverless.get(title).run(\n",
+    "        circuit=random_circuit(3, 3),\n",
+    "        circuit_list=[random_circuit(3, 3) for _ in range(3)],\n",
+    "        backend=\"ibm_kyiv\",\n",
+    "        optimization_level=1,\n",
+    "    )\n",
+    "    for retry in range(25):\n",
+    "        time.sleep(5)\n",
+    "        status = job.status()\n",
+    "        if status == \"DONE\":\n",
+    "            print(\"Job completed successfully\")\n",
+    "            return\n",
+    "        if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
+    "            raise Exception(\n",
+    "                f\"Unexpected job status '{status}'.\\nHere's the logs:\\n\"\n",
+    "                + job.logs()\n",
+    "            )\n",
+    "        print(f\"Waiting for job (status '{status}')\")\n",
+    "    raise Exception(\"Job did not complete in time\")\n",
+    "\n",
+    "\n",
+    "test_serverless_job(\n",
+    "    title=\"transpile_remote_serverless_test\", entrypoint=\"transpile_remote.py\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "611fe030-4494-46b5-9ea1-9678ac513210",
    "metadata": {},
@@ -170,117 +239,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6bc45489-56d0-4f46-8659-9df4d1555516",
-   "metadata": {},
-   "source": [
-    "## Manage data across your program\n",
-    "\n",
-    "Qiskit Serverless allows you to manage files in the `/data` directory across all your programs. This includes several limitations:\n",
-    "\n",
-    "- Only `tar` and `h5` files are supported today\n",
-    "- This is only a flat `/data` storage, and cannot have `/data/folder/` subdirectories\n",
-    "\n",
-    "The following shows how to upload files. Be sure you have authenticated to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account) (see [Deploy to IBM Quantum Platform](./serverless-first-program#deploy-to-ibm-quantum-platform) for instructions)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0183278f-8ce3-4466-9255-097b2d211052",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"message\":\"/usr/src/app/media/5f37582aa306c50013fac285/transpile_demo.tar\"}'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import tarfile\n",
-    "from qiskit_serverless import IBMServerlessClient\n",
-    "\n",
-    "# Create a tar\n",
-    "filename = \"transpile_demo.tar\"\n",
-    "file = tarfile.open(filename, \"w\")\n",
-    "file.add(\"./source_files/transpile_remote.py\")\n",
-    "file.close()\n",
-    "\n",
-    "# Upload the tar to Serverless data directory\n",
-    "serverless = IBMServerlessClient()\n",
-    "serverless.file_upload(filename)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f762470-945f-48d5-a65b-c60d3b2dae3f",
-   "metadata": {},
-   "source": [
-    "Next, you can list all the files in your `data` directory. This data is accessible to all programs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "14241fc4-d0cb-4803-8752-a460e1f48708",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['transpile_demo.tar']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "serverless.files()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a97bd83e-8250-43bb-b1c4-d40d822c7ba2",
-   "metadata": {},
-   "source": [
-    "This can be done from a program by using `file_download()` to download the file to the program environment, and uncompressing the `tar`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "ef649b2a-ed95-4dd2-89d9-61438faa7c1e",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
-    "%%writefile ./source_files/extract_tarfile.py\n",
-    "\n",
-    "import tarfile\n",
-    "from qiskit_serverless import IBMServerlessClient\n",
-    "\n",
-    "serverless = IBMServerlessClient(token=\"<YOUR_IBM_QUANTUM_TOKEN>\")\n",
-    "files = serverless.files()\n",
-    "demo_file = files[0]\n",
-    "downloaded_tar = serverless.file_download(demo_file)\n",
-    "\n",
-    "\n",
-    "with tarfile.open(downloaded_tar, 'r') as tar:\n",
-    "    tar.extractall()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b93dbdb-2060-468b-8496-ba98142a780b",
-   "metadata": {},
-   "source": [
-    "At this point, your program can interact with the files, as you would a local experiment. `file_upload()` , `file_download()`, and `file_delete()` can be called from your local experiment, or your uploaded program, for consistent and flexible data management."
+    "# This cell is hidden from users.\n",
+    "# It checks the distributed program works.\n",
+    "test_serverless_job(\n",
+    "    title=\"transpile_remote_serverless_test\", entrypoint=\"transpile_remote.py\"\n",
+    ")"
    ]
   },
   {
