Re-run notebook

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -16,7 +16,28 @@
      "version-info"
     ]
    },
-   "source": []
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-ibm-runtime~=0.33.2\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-serverless~=0.18.0\n",
+    "qiskit-ibm-catalog~=0.2\n",
+    "qiskit-addon-sqd~=0.8.1\n",
+    "qiskit-addon-utils~=0.1.0\n",
+    "qiskit-addon-aqc-tensor~=0.1.2\n",
+    "qiskit-addon-obp~=0.1.0\n",
+    "scipy~=1.14.1\n",
+    "pyscf~=2.7.0\n",
+    "```\n",
+    "</details>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
    "metadata": {
     "tags": [
@@ -55,10 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile ./source_files/transpile_remote.py\n",
     "\n",
@@ -88,11 +117,19 @@
    ]
   },
   {
-   "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
@@ -121,11 +158,19 @@
    ]
   },
   {
-   "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
@@ -140,14 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "757f81e9-3981-4358-a1a2-d3262c7cddcd",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
     "# This cell is hidden from users. It checks the transpilation ran correctly.\n",
@@ -157,10 +210,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "df28a92c-3585-49f0-a2ea-828a34638684",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'INITIALIZING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'INITIALIZING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job completed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell is hidden from users.\n",
     "# It uploads the serverless program and checks it runs.\n",
@@ -223,10 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cea90969-cfbf-4181-9ffa-524f3709dc69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
@@ -240,13 +386,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "55163053-2cd8-4e5d-8470-d08055a6f401",
    "metadata": {
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'QUEUED')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'INITIALIZING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'INITIALIZING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for job (status 'RUNNING')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Job completed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell is hidden from users.\n",
     "# It checks the distributed program works.\n",
