updating wording on Functions pg

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -49,44 +49,52 @@
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
-    "To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
+    "1. To start using Qiskit Functions, install the IBM Qiskit Functions Catalog client:\n",
     "\n",
-    "`pip install qiskit-ibm-catalog`\n",
+    "    ```\n",
+    "    pip install qiskit-ibm-catalog\n",
+    "    ```\n",
+    "1. Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account), and activate your Python virtual environment.  See the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up. \n",
     "\n",
-    "Once installed, authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/) as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "be135691-adee-4a1c-98bf-e76deb12319f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "    <span id=\"save-account\"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#functions-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.)\n",
+    "    \n",
+    "    To use `save_account()`, run Python in your shell to open a REPL (read-eval-print loop), then enter the following:\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(token=\"<YOUR_IQP_API_TOKEN>\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42843fcd-1779-4a74-8d6a-7d00c22e374e",
-   "metadata": {},
-   "source": [
-    "Optionally, you can use the `save_account()` method to save your credentials for easy access later on, before initializing the service. This saves your credentials in the same place as `QiskitRuntimeService.save_account()`, so you can skip this step if you had previously used `QiskitRuntimeService` to save your account."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54fc48c8-3a65-478c-9bc3-ec6eb4db425a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
+    "    ```python\n",
+    "    token = \"<your-token>\"\n",
+    "    ```\n",
     "\n",
-    "# This can be skipped if you previously did QiskitRuntimeService.save_account()\n",
-    "QiskitFunctionsCatalog.save_account(token=\"<YOUR_IQP_API_TOKEN>\")"
+    "    ```python\n",
+    "    from qiskit-ibm-catalog import QiskitFunctionsCatalog\n",
+    "\n",
+    "    QiskitFunctionsCatalog.save_account(\n",
+    "      token=token\n",
+    "      )\n",
+    "    ```\n",
+    "\n",
+    "    Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`.\n",
+    "\n",
+    "    ```python\n",
+    "    # Load saved credentials\n",
+    "    service = QiskitFunctionsCatalog()\n",
+    "    ```\n",
+    "\n",
+    "1. <span id=\"functions-untrusted\"></span>**Avoid executing code on an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, expand the following section to view code you can use:\n",
+    "\n",
+    "    <details>\n",
+    "        <summary>Initialize the service in an untrusted environment</summary>\n",
+    "\n",
+    "    ```python\n",
+    "    from qiskit-ibm-catalog import QiskitFunctionsCatalog\n",
+    "  \n",
+    "    # Refresh your API token on the dashboard after using the code as follows:\n",
+    "    service = QiskitFunctionsCatalog(token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
+    "    ```\n",
+    "    </details>\n",
+    "\n",
+    "    <Admonition type=\"caution\">\n",
+    "      When sharing code with others, ensure that your API token is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.\n",
+    "    </Admonition>"
    ]
   },
   {
