--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -19,7 +19,7 @@ In the primitives, you can explicitly enable and disable individual error mitiga
 
 <Admonition type = "note" title = "Notes">
 - Not all options are available for both primitives.   See the [available options](runtime-options-overview#options-table) table for the list of available options.
-- Not all methods work together on all types of circuits.  See the [options compatibility](runtime-options-overview#options-compatibility-table) table for details.
+- Not all methods work together on all types of circuits.  See the [feature compatibility](runtime-options-overview#options-compatibility-table) table for details.
 </Admonition>
 ```python
 
