--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -212,7 +212,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "df28a92c-3585-49f0-a2ea-828a34638684",
-   "metadata": {},
+   "metadata": {
+     "tags": [
+       "remove-cell"
+     ]
+   },
    "outputs": [
     {
      "name": "stdout",
