--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -10,16 +10,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc19a86-a234-4220-bb4f-d66d3834e0c3",
-   "metadata": {
-    "tags": [
-     "version-info"
-    ]
-   },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "1a3c196d-545d-417f-b34e-fa422aa9a394",
    "metadata": {},
    "source": [
@@ -200,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9a901271",
    "metadata": {},
    "outputs": [
@@ -221,8 +211,7 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you did not previously save your credentials, use the following line instead:\n",
-    "# service = QiskitRuntimeService(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
+    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(simulator=False, operational=True)\n",
@@ -536,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "428f05e7",
    "metadata": {},
    "outputs": [],
@@ -544,8 +533,8 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you did not previously save your credentials, use the following line instead:\n",
-    "# service = QiskitRuntimeService(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
+    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/functions to authenticate with your API token.\n",
+    "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(\n",
