add comments, remove placeholder text for api code

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7077ba00-1571-4f99-8c53-b1a9ac280987",
    "metadata": {},
    "outputs": [
@@ -192,6 +192,7 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
+    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
     "backend = service.backend(backend_name)"
    ]
