--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -58,12 +58,13 @@
     "\n",
     "    <span id=\"save-account\"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#functions-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.)\n",
     "\n",
-    "    To use `save_account()`, run Python in your shell to open a REPL (read-eval-print loop), then enter the following:\n"
+    "    To use `save_account()`, run Python in your shell to open a REPL (read-eval-print loop), then enter the following:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24dc565f-bb5d-4164-ba44-fc04c2fcaafd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32919d16-4b5e-439a-8cda-33687a3d96b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +85,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e458aad5-fa7c-4ba1-8e9e-be770d89a04a",
    "metadata": {},
    "source": [
     "Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitFunctionsCatalog()`."
@@ -91,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e872c222-aee9-40eb-8778-9a8e5434a11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80441467-1d9a-4107-8570-22afa6e369f7",
    "metadata": {},
    "source": [
     "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, expand the following section to view code you can use:\n",
@@ -113,11 +118,12 @@
     "    # Refresh your API token on the dashboard after using the code as follows:\n",
     "    catalog = QiskitFunctionsCatalog(token=\"<MY_IBM_QUANTUM_TOKEN>\")\n",
     "    ```\n",
-    "    </details>\n"
+    "    </details>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "6f2d0a37-1c6d-4cad-a9ce-c4d05c7aaaf1",
    "metadata": {},
    "source": [
     "    <Admonition type=\"caution\">\n",
