Apply suggestions from code review

--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -72,7 +72,7 @@ def transpile_parallel(circuit, pass_manager):
 
 try:
     # Get backend
-    # Follow instructions at https://docs.quantum.ibm.com/guides/functions to authenticate with your API token.
+    # Follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.
     service = QiskitRuntimeService(channel="ibm_quantum")
     backend = service.get_backend(backend_name)
 
@@ -108,7 +108,6 @@ Follow the instructions on the [Introduction to Qiskit Functions](/guides/functi
 from qiskit_ibm_catalog import QiskitServerless, QiskitFunction
 
 # Authenticate to the remote cluster and submit the pattern for remote execution.
-# Follow instructions at https://docs.quantum.ibm.com/guides/functions to authenticate with your API token.
 serverless = QiskitServerless() 
 
 transpile_remote_demo = QiskitFunction(
