Use cell timeout

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -429,10 +429,10 @@
     "    backend=\"ibm_sherbrooke\",\n",
     "    optimization_level=1,\n",
     ")\n",
-    "for cycle in range(20):\n",
+    "while True:\n",
     "    sleep(5)\n",
     "    status = job.status()\n",
-    "    print(f\"Cycle {cycle}: Status: {status}\")\n",
+    "    print(f\"Status: {status}\")\n",
     "    if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
     "        raise Exception(\n",
     "            f\"Unexpected job status: '{status}'\\n\"\n",
