Remove print statement and timeout logic

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -432,7 +432,6 @@
     "while True:\n",
     "    sleep(5)\n",
     "    status = job.status()\n",
-    "    print(f\"Status: {status}\")\n",
     "    if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
     "        raise Exception(\n",
     "            f\"Unexpected job status: '{status}'\\n\"\n",
@@ -440,10 +439,7 @@
     "            + job.logs()\n",
     "        )\n",
     "    if status == \"DONE\":\n",
-    "        break\n",
-    "status = job.status()\n",
-    "if status != \"DONE\":\n",
-    "    raise Exception(f\"Job did not complete in time (got status '{status}')\")"
+    "        break"
    ]
   },
   {
