--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -130,7 +130,9 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/functions to authenticate with your API token.\n",
+    "# If you have not previously saved your credentials, follow instructions at \n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp \n",
+    "# to authenticate with your API token.\n",
     "hub = \"<YOUR_IQP_HUB>\"\n",
     "group = \"<YOUR_IQP_GROUP>\"\n",
     "project = \"<YOUR_IQP_PROJECT>\"\n",
