--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -123,7 +123,9 @@
     "\n",
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/functions to authenticate with your API token.\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/functions\n",
+    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# Load your function\n",
