--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -242,7 +242,9 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.\n",
+    "# If you have not previously saved your credentials, follow instructions at \n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp \n",
+    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(simulator=False, operational=True)\n",
@@ -564,7 +566,9 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.\n",
+    "# If you have not previously saved your credentials, follow instructions at \n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp \n",
+    "# to authenticate with your API token.\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
