--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -95,7 +95,9 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_serverless import distribute_task\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
+    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "@distribute_task(target={\"cpu\": 1})\n",
