what to do if you accidentally share token

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -129,6 +129,8 @@
    "source": [
     "    <Admonition type=\"caution\">\n",
     "      **Protect your API token!** Never include your token in source code, Python script, or notebook file. When sharing code with others, ensure that your API token is not embedded directly within the Python script. Instead, share the script without the token and provide instructions for securely setting it up.\n",
+    "\n",
+    "      If you accidentally share your token with someone or include it in version control like Git, immediately revoke your token by expiring it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field) to reduce risk.\n",
     "    </Admonition>"
    ]
   },
